--- a/calculators/package.json
+++ b/calculators/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "numeric": "^1.2.6",
     "plotly.js": "^2.26.1",
@@ -17,6 +18,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-icons": "^4.11.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
