--- a/calculators/package.json
+++ b/calculators/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.0",
+    "mathjs": "^11.11.1",
     "numeric": "^1.2.6",
     "plotly.js": "^2.26.1",
     "react": "^18.2.0",
