I tried very hard in the past 2 days, gave my best to code it in ReactJS but I am unable to fix it. I've tried various logics to build the proper functioning code but at last it's a failure for me.This is the maximum correct code that I could resolve with the given logic and further modifications are beyond my scope. SORRY for putting this issue I had not even thought that logic building for this code in ReactJS would be so complex

--- a/calculators/package.json
+++ b/calculators/package.json
@@ -6,11 +6,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
+    "@mui/material": "^5.14.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.0",
+    "linear-algebra": "^3.1.4",
+    "mathjs": "^11.11.1",
     "numeric": "^1.2.6",
     "plotly.js": "^2.26.1",
     "react": "^18.2.0",
