--- a/calculators/package.json
+++ b/calculators/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "jspdf": "^2.5.1",
+    "mathjs": "^11.11.2",
     "numeric": "^1.2.6",
     "plotly.js": "^2.26.1",
     "react": "^18.2.0",
