--- a/calculators/package.json
+++ b/calculators/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
+    "inr-words": "^1.0.4",
     "jspdf": "^2.5.1",
     "mathjs": "^11.11.2",
+    "number-to-words": "^1.2.4",
     "numeric": "^1.2.6",
     "plotly.js": "^2.26.1",
     "react": "^18.2.0",
