--- a/calculators/package.json
+++ b/calculators/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
+    "crypto-js": "^4.1.1",
     "d3": "^7.8.5",
     "inr-words": "^1.0.4",
     "jspdf": "^2.5.1",
