--- a/calculators/package.json
+++ b/calculators/package.json
@@ -26,6 +26,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "satellite.js": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
