--- a/calculators/package.json
+++ b/calculators/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "buffer": "^6.0.3",
     "chart.js": "^4.4.0",
     "crypto-js": "^4.1.1",
     "d3": "^7.8.5",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "satellite.js": "^5.0.0",
+    "tesseract.js": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
