add base64 decoder/encoder

--- a/calculators/package.json
+++ b/calculators/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "base-64": "^1.0.0",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.0",
     "crypto-js": "^4.1.1",
