--- a/calculators/package.json
+++ b/calculators/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.0",
     "crypto-js": "^4.1.1",
     "d3": "^7.8.5",
     "inr-words": "^1.0.4",
@@ -22,6 +23,7 @@
     "plotly.js": "^2.26.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
