implement balanced binary search tree visualizer

--- a/calculators/package.json
+++ b/calculators/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "avl": "^1.5.3",
     "axios": "^1.5.1",
+    "binary-tree-visualizer": "^2.1.5",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.0",
     "crypto-js": "^4.1.1",
