--- a/calculators/package.json
+++ b/calculators/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-photo-editor": "^2.0.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
