--- a/calculators/package.json
+++ b/calculators/package.json
@@ -15,9 +15,11 @@
     "chart.js": "^4.4.0",
     "crypto-js": "^4.1.1",
     "d3": "^7.8.5",
+    "fraction.js": "^4.3.7",
+    "fractions": "^1.0.2",
     "inr-words": "^1.0.4",
     "jspdf": "^2.5.1",
-    "mathjs": "^11.11.2",
+    "mathjs": "^11.12.0",
     "nerdamer": "^1.1.13",
     "number-to-words": "^1.2.4",
     "numeric": "^1.2.6",
